--- a/assets/templates/basic/frontend/css/seller_profile.css
+++ b/assets/templates/basic/frontend/css/seller_profile.css
@@ -74,6 +74,9 @@
     margin-top: -4rem!important;
 
 }
+.portfolio .mt-3{
+    margin-top: 2rem!important;
+}
 .card-text-tab {
     margin-bottom: 12px;
     border-bottom: 1px solid #e1e7ec;
@@ -162,6 +165,36 @@
     font-weight:500;
     margin-left: 0rem;
 }
+@media only screen and (max-width: 600px) {
+    .profile .short-text {
+        display: inline;
+        font-size: 14px;
+        font-weight: 500;
+        margin-left: 3rem;
+    }
+}
+@media only screen and (max-width: 600px) {
+    .profile button {
+        display: inline;
+        margin-left: 10rem;
+        margin-bottom: 2rem;
+    }
+}
+@media only screen and (min-width: 768px) {
+    .profile button {
+        display: inline;
+        margin-left: 10rem;
+        margin-bottom: 2rem;
+    }
+}
+@media only screen and (min-width: 768px) {
+    .profile .short-text {
+        display: inline;
+        font-size: 11px;
+        font-weight: 600;
+        margin-left: 1rem;
+    }
+}
 .timeline{
     padding-left: 20px;
 }
@@ -201,28 +234,42 @@
 .techno.on ~ .techno.on::before {
     content: ', ';
 }
-.quote .blockquote {
+
+.quote {
+    height: 48vh;
+    color: #383838;
+    background: #FAF5FD !important;
+}
+.quote  .blockquote{
     font-family: 'Mulish';
     font-style: italic;
     display: block;
     max-width: 100%;
     position: relative;
     padding: 21px 4px;
-    height: 192px;
-    color: #383838;
-
 }
-@media only screen and (min-width: 600px) {
-    .quote .blockquote {
+@media only screen and (max-width: 600px) {
+    .quote {
+        height: 86vh;
+        color: #383838;
+        background: #FAF5FD !important;
+        margin-bottom: 174px;
+    }
+}
+
+.quote blockquote{
+    background: #FAF5FD !important;
+}
+
+@media only screen and (max-width: 600px) {
+    .quote  .blockquote {
         font-family: 'Mulish';
         font-style: italic;
         display: block;
         max-width: 100%;
         position: relative;
         padding: 21px 4px;
-        height: 192px;
         color: #383838;
-
     }
 }
 
