--- a/assets/resources/style/index.css
+++ b/assets/resources/style/index.css
@@ -326,7 +326,7 @@
 @media only screen and (max-width: 991px) {
   .hero-banner {
     padding: 10px;
-    text-align: center;
+    /* text-align: center; */
   }
   .hero-banner figure svg {
     width: 100%;
