--- a/assets/templates/basic/frontend/css/seller_profile.css
+++ b/assets/templates/basic/frontend/css/seller_profile.css
@@ -585,17 +585,17 @@ blockquote::after {
     font-size: 28px;
     font-weight: 700;
 }
-@media (min-width: 576px){
+/* @media (min-width: 576px){
     .modal-dialog {
         max-width: 600px;
         margin: 1.75rem auto;
     }
-}
-.modal-body{
+} */
+/* .modal-body{
     max-height: calc(100vh - 200px);
     overflow-y: auto;
     padding-top: 16px !important;
-}
+} */
 .section-heading-border{
     border-bottom: 1px solid #C4C4C4;
     margin-bottom: 5px;
