Job details view design completed
Job details view design completed

--- a/assets/resources/templates/basic/frontend/css/custom/admin_job_view.css
+++ b/assets/resources/templates/basic/frontend/css/custom/admin_job_view.css
@@ -4,6 +4,9 @@
 .row.custom_cards_s {
     margin-bottom: 60px;
 }
+.ad-job-detail{
+    margin-left: 20px !important;
+}
 .d-heading{
     font-size: 20px;
     padding: 20px 0px;
