--- a/assets/resources/templates/basic/frontend/css/custom/send-offer.css
+++ b/assets/resources/templates/basic/frontend/css/custom/send-offer.css
@@ -119,12 +119,13 @@ h6{
     border:1px solid #ddd;
 }
 .btn-outline-green{
-    border:1px solid #007F7F;
+    border: 1px solid #007F7F;
     background-color: white;
     color: #007F7F;
     border-radius: 5px;
     padding: 6px 20px;
-    
+    width: 126px;
+    margin-top: 20px;
 }
 .fs-14px{
     font-size: 14px;
