--- a/assets/resources/style/style.css
+++ b/assets/resources/style/style.css
@@ -3572,6 +3572,15 @@ font-size: 14px;
   background-color: #ebf7f77e;
   /*text-align: center;*/
 }
+.custom-widget-software {
+  
+  border: 0px solid #e1e7ec;
+  border-radius: 0px;
+  padding: 20px;
+  background-color: #ebf7f77e;
+  margin-bottom: -28px;
+
+}
 
 .widget-btn a {
   padding: 7px 15px;
@@ -5162,8 +5171,8 @@ background-color: #ebf7f77e;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-  font-size: 25px;
-  font-weight: 500;
+  font-size: 17px;
+  font-weight: 450;
   border-bottom: 1px solid #c5e0e0;
   padding-bottom: 15px;
   margin-bottom: 7px;
@@ -5180,7 +5189,26 @@ background-color: #ebf7f77e;
   padding-bottom: 10px;
   margin-bottom: 7px;
 }
+.sidebar-title-software li{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 15px;
+  font-weight: 500;
+  padding-bottom: 10px;
+  margin-bottom: 7px;
+}
+.sidebar-title-software .bg{
+  background-color: #D4EBEB;
+  padding: 9px;
+  font-size: 17px;
+  font-weight: 450;
+  margin-top: -7px;
+  margin-bottom: -2px;
 
+
+}
 .sidebar-list li  {
   display: flex;
   flex-wrap: wrap;
