--- a/assets/templates/basic/frontend/sass/layout/_header.scss
+++ b/assets/templates/basic/frontend/sass/layout/_header.scss
@@ -23,11 +23,11 @@
 .loader {
   position: absolute;
   left: 0;
-  top: 0;
+  top: -170px;
   right: 0;
   bottom: 0;
   margin: auto;
-  width: 150px;
+  width: 300px;
 }
 .loader:before {
   content: "";
