--- a/assets/templates/basic/frontend/css/style.css
+++ b/assets/templates/basic/frontend/css/style.css
@@ -1780,8 +1780,8 @@ option {
   text-align: center;
   z-index: 9999999;
   background-color: white;
+  opacity: 0.9;
 }
-
 .box-loader {
   position: absolute;
   top: 0;
@@ -1794,11 +1794,11 @@ option {
 .loader {
   position: absolute;
   left: 0;
-  top: -170px;
+  top: 0;
   right: 0;
   bottom: 0;
   margin: auto;
-  width: 300px;
+  width: 100px;
 }
 
 .loader:before {
