--- a/assets/templates/basic/frontend/css/style.css
+++ b/assets/templates/basic/frontend/css/style.css
@@ -1794,11 +1794,11 @@ option {
 .loader {
   position: absolute;
   left: 0;
-  top: 0;
+  top: -170px;
   right: 0;
   bottom: 0;
   margin: auto;
-  width: 100px;
+  width: 300px;
 }
 
 .loader:before {
