--- a/assets/resources/style/style.css
+++ b/assets/resources/style/style.css
@@ -5573,22 +5573,33 @@ color: #000000;
     height: 17em;
   }
 }
+
+
+
 .carousel-control-prev {
   left: 93%!important;
 }
 
-
+@media (min-width: 1560px) {
+  .carousel-control-prev {
+    left: 91%!important;
+  }
+  .carousel-control-next, .carousel-control-prev {
+    position: absolute;
+    top: -16px;
+  }
+}
 
 .carousel-control-prev-icon {
   background-image:
-          url('data:image/svg+xml;utf8,<svg style="color: purple" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16"> <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z" fill="purple"></path> </svg>');
+          url('data:image/svg+xml;utf8,<svg style="color: purple" xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16"> <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z" fill="purple"></path> </svg>');
 
   border: 1px solid #7F007F;
 
 }
 .carousel-control-next-icon {
   background-image:
-          url('data:image/svg+xml;utf8,<svg style="color: purple" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16"> <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" fill="purple"/> </svg>');
+          url('data:image/svg+xml;utf8,<svg style="color: purple" xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16"> <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" fill="purple"/> </svg>');
 
   border: 1px solid #7F007F;
 }
