--- a/assets/resources/style/style.css
+++ b/assets/resources/style/style.css
@@ -286,6 +286,28 @@ blockquote .quote-icon {
     border: 1px solid white !important;
     background-color: whitesmoke;
 }
+
+.client-profile-pic-edit-icon {
+  border-radius: 33px;
+  color: black;
+  position: absolute;
+  left: 27% !important;
+  padding: 5px 7px 4px 11px;
+  border: 1px solid white !important;
+  background-color: whitesmoke;
+  bottom: -140px;
+}
+
+@media (min-width: 1700px) {
+  .client-profile-pic-edit-icon {
+    bottom: -120px;
+
+  }
+  .profile-pic-edit-icon{
+    right: 34% !important;
+  }
+}
+
 .icon-size{
   font-size: 1.5em !important;
 }
