--- a/assets/resources/templates/basic/frontend/css/custom/send-offer.css
+++ b/assets/resources/templates/basic/frontend/css/custom/send-offer.css
@@ -11,7 +11,7 @@ h6{
 .tag-class{
     border-radius: 14px;
     color: #007F7F;
-    
+    border: 1px solid #007F7F;
     height: 18px;
     width: 70px;
 
@@ -149,7 +149,7 @@ h6{
     font-weight: 600;
 }
 .per-hour{
-    margin-top: 6px;
+    margin-top: 8px;
     font-weight: 500;
 }
 @media only screen and (max-width:540px){
