--- a/assets/resources/templates/basic/frontend/css/custom/testimonial_response.css
+++ b/assets/resources/templates/basic/frontend/css/custom/testimonial_response.css
@@ -55,7 +55,8 @@
     .rating label .icon {
         float: left;
         color: transparent;
-        margin-left: 3px;
+        margin-left: 8px;
+        font-size: 18px !important;
     }
 
     .rating label:last-child .icon {
