--- a/assets/resources/style/index.css
+++ b/assets/resources/style/index.css
@@ -339,10 +339,13 @@
 
 .select2-container--default.select2-container--focus .select2-selection--multiple {
   border: 1px solid #e1e7ec !important;
+  height: 44px !important;
 }
 
 .select2-container--default .select2-selection--multiple {
   border: 1px solid #e1e7ec;
+  height: 44px !important;
+
 }
 
 /*banner css*/
@@ -2610,7 +2613,6 @@ hr {
   }
 }
 .badge--primary {
-  width: 76px;
   height: 25px;
   background: #DB8343;
   border-radius: 7px;
