--- a/assets/templates/basic/frontend/css/style.css
+++ b/assets/templates/basic/frontend/css/style.css
@@ -5594,7 +5594,7 @@ option {
   z-index: 9999;
 }
 .modal .form-control{
-  height: auto;
+  /* height: auto; */
 }
 .deposit-item-footer .btn--base{
   background: transparent;
