--- a/assets/resources/style/index.css
+++ b/assets/resources/style/index.css
@@ -339,7 +339,7 @@
 
 .select2-container--default.select2-container--focus .select2-selection--multiple {
   border: 1px solid #e1e7ec !important;
-  height: 44px !important;
+  /* height: 44px !important; */
 }
 
 .select2-container--default .select2-selection--multiple {
