--- a/assets/resources/style/index.css
+++ b/assets/resources/style/index.css
@@ -952,6 +952,26 @@
     height: 150px;
     margin-left: 210px !important;
   }
+  .carousel-mobile-view{
+    display: none;
+  }
+  .footer-section .footer-heading h2 {
+    color: #fff;
+    font-size: 23px;
+    font-weight: 500;
+    line-height: 40px;
+  }
+  .mobile-view-col{
+    width: auto;
+  }
+  .hvideoContainer iframe{
+    width: 289px !important;
+    height: 200px !important;
+  }
+  #videoContainer iframe{
+    width: 289px !important;
+    height: 200px !important;
+  }
 }
 @media (max-width: 767px) {
   .header-bottom-area .navbar-collapse {
@@ -1065,6 +1085,22 @@
     width: 40%;
     height: 150px;
     margin-left: 210px !important;
+  }
+  .carousel-mobile-view{
+    display: none;
+  }
+  .footer-section .footer-heading h2 {
+    color: #fff;
+    font-size: 23px;
+    font-weight: 500;
+    line-height: 40px;
+  }
+  .mobile-view-col{
+    width: auto;
+  }
+  .hvideoContainer iframe{
+    width: 289px !important;
+    height: 200px !important;
   }
 }
 .header-short-menu.sub-short-menu .short-menu {
