--- a/assets/resources/style/style.css
+++ b/assets/resources/style/style.css
@@ -901,8 +901,8 @@ blockquote .quote-icon {
 .pagination {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 60px;
-  border-top: 1px solid #e1e7ec;
+  /* margin-top: 60px; */
+  /* border-top: 1px solid #e1e7ec; */
   border-radius: 0;
 }
 .pagination .page-item {
