--- a/assets/resources/style/index.css
+++ b/assets/resources/style/index.css
@@ -2661,6 +2661,22 @@ hr {
     display: none;
   }
 }
+@media only screen and (max-width:683px){
+    .dz-message {
+      text-align: center !important;
+      position: relative !important;
+      top: 14% !important;
+      left: 0% !important;
+  }
+    .upload_icon {
+      position: absolute !important;
+      left: 0% !important;
+      right: 0% !important;
+      top: 59% !important;
+      bottom: 22% !important;
+      text-align: center !important;
+  }
+}
 .custom-table-new thead tr {
   background-color: #EEF4F4;
   height: 61px;
