--- a/assets/resources/style/style.css
+++ b/assets/resources/style/style.css
@@ -5642,3 +5642,26 @@ color: #000000;
   transition: opacity .15s;
   left: 72rem;
 }
+@media only screen and (max-width:683px){
+    .item-details-content {
+      padding-top: 15px;
+      width: 325px !important;
+  }
+  .profile-widget-header .profile-widget-author .left {
+      width: 100%;
+  }
+    a.standard-btn {
+      padding: 9px 20px;
+      border: 0px solid #e1e7ec;
+      border-radius: 5px;
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px;
+      -ms-border-radius: 5px;
+      -o-border-radius: 5px;
+      font-size: 10px;
+      font-weight: 400;
+      background-color: #007F7F;
+      color: #fff;
+      margin-top: 10px !important;
+  }
+}
