--- a/assets/resources/style/style.css
+++ b/assets/resources/style/style.css
@@ -5647,6 +5647,17 @@ color: #000000;
       padding-top: 15px;
       width: 325px !important;
   }
+  h2.title {
+      font-weight: 700;
+      font-size: 18px;
+      padding: 10px 10px 18px;
+      display: inline-block;
+  }
+  h3.title {
+      font-weight: 600;
+      font-size: 16px!important;
+      padding-bottom: 15px;
+  }
   .profile-widget-header .profile-widget-author .left {
       width: 100%;
   }
