--- a/assets/resources/style/style.css
+++ b/assets/resources/style/style.css
@@ -5653,6 +5653,22 @@ color: #000000;
       padding: 10px 10px 18px;
       display: inline-block;
   }
+  .item-details-footer .left {
+      width: 100%;
+  }
+  .item-details-tag ul li a {
+      padding: 0px 15px !important;
+      border: 0px solid #e1e7ec;
+      border-radius: 5px;
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px;
+      -ms-border-radius: 5px;
+      -o-border-radius: 5px;
+      font-size: 9px;
+      font-weight: 500;
+      background-color: #008181;
+      color: #fff;
+  }
   h3.title {
       font-weight: 600;
       font-size: 16px!important;
