--- a/public/css/all-proposal.css
+++ b/public/css/all-proposal.css
@@ -1,1 +1,301 @@
-ul.skills-listing li{float:left;display:inline-block;background:#58a7a7;border-radius:20px;padding:2px 17px;font-weight:400;font-size:14px;line-height:18px;color:#fff;margin-right:1%}.skills-c h2{font-style:normal;font-weight:600;font-size:16px;line-height:18px;color:#000}ul.skills-listing{margin-top:15px}.skills-c{margin-top:30px}.p_desription p{width:89%;font-size:14px;line-height:20px;color:#000;width:86%;display:inline-block;padding:35px 0 20px}a.btn-products-s{border:1px solid #7f007f;border-radius:4px;padding:8px 18px;font-weight:600;font-size:14px;line-height:18px;color:#7f007f;width:auto!important;margin:0 1%}a.btn-products-s.phire{background:#7f007f;color:#fff}p.rateperh{font-size:15px;color:#007f7f;margin-top:6px}p.perhourprice,p.rateperh{line-height:18px;font-weight:600}p.perhourprice{font-size:14px;color:#000}h4.pname-c{font-weight:600;font-size:18px;line-height:23px;color:#7f007f;margin-top:16px}.plocation,p.pdesination-c{font-weight:600;font-size:14px;line-height:18px;color:#000}.plocation{position:relative;padding-left:20px;margin-top:42px}p.plocation:before{width:20px;height:20px;background:red;position:absolute;left:0;top:2px;content:"";background:url(/assets/images/job/location-icon.png) no-repeat}.biorow{margin-top:60px}.borderleftc{position:relative}.borderleftc:after{height:62px;width:1px;background:#cbdfdf;content:"";right:11px;position:absolute;top:5px}.cv-container{border:1px solid #cbdfdf;padding:20px 10px 60px}.prosals-h{font-weight:600;font-size:18px;line-height:18px;color:#000;display:inline-block;padding:10px 10px 40px 17px}div#custom-search-input{background:#eff8f8;border:1px solid #cbdfdf;border-radius:6px}div#custom-search-input input{background:transparent;border:none}div#custom-search-input .input-group{margin-bottom:0}div#custom-search-input span.input-group-btn{position:relative;top:9px;right:10px}select#Filters{padding:8px 17px 8px 34px;margin-right:-13px}select#bestmatch,select#Filters{float:right;background:#eff8f8;border:1px solid #cbdfdf;border-radius:5px;color:#007f7f;font-size:16px}select#bestmatch{padding:8px 15px;position:relative;right:-27px}p.sort-p{width:80%;display:inline-block;float:left;text-align:right;font-weight:600;font-size:14px;line-height:18px;color:#000;margin-top:11px}.row.btns-s{position:relative;left:23px}@media only screen and (max-width:1200px){p.sort-p{width:70%}}@media only screen and (max-width:1190px){select#bestmatch{right:0}}@media only screen and (max-width:767px){.p_desription p{width:100%;text-align:center}a.btn-products-s{width:auto;text-align:CENTER;margin:8px auto;display:block;padding:7px 20%;display:inline-block}ul.skills-listing li{margin-right:1%;margin-bottom:14px;font-size:12px!important;padding:2px 2%}select#bestmatch{float:right;width:84%;margin-bottom:15px;right:0}p.sort-p{width:auto}select#Filters{float:none;background:#eff8f8;border:1px solid #cbdfdf;border-radius:5px;padding:8px 17px 8px 34px;width:100%;margin-right:-13px}p.rateperh{text-align:center}p.perhourprice{font-weight:600;font-size:14px;line-height:18px;color:#000;text-align:CENTER;margin-bottom:20px}.row.borderleftc{text-align:center;margin-top:30px}.borderleftc:after{display:none}.plocation{font-weight:600;font-size:14px;position:relative;padding-left:0;margin-bottom:40px!important;margin-top:16px;display:inline-block}p.plocation:before{left:-24px}.row.btns-s{position:relative;left:0;text-align:center}.row.btns-s .col-md-4{display:inline-block;flex:auto;width:3.33%}ul.skills-listing{margin-top:15px;text-align:center;display:inline-block;width:100%}ul.skills-listing li{float:none;display:inline-block}.skills-c h2{text-align:center}}
+
+ul.skills-listing li {
+    float: left;
+    display: inline-block;
+    background: #58A7A7;
+    border-radius: 20px;
+    padding: 2px 17px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+    color: #FFFFFF;
+    margin-right: 1%;
+}
+.skills-c h2{
+    font-style: normal;
+font-weight: 600;
+font-size: 16px;
+line-height: 18px;
+color: #000000;
+
+}
+ul.skills-listing {
+    margin-top: 15px;
+}
+.skills-c {
+    margin-top: 30px;
+}
+.p_desription p {
+    width: 89%;
+    font-size: 14px;
+    line-height: 20px;
+    color: #000000;
+    width: 86%;
+    display: inline-block;
+    padding: 35px 0px 20px 0px;
+}
+a.btn-products-s {
+    border: 1px solid #7F007F;
+    border-radius: 4px;
+    padding: 8px 18px;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 18px;
+    color: #7F007F;
+    width: auto !important;
+    margin:0px 1%;
+
+}
+a.btn-products-s.phire {
+    background: #7F007F;
+    color: #fff;
+}
+p.rateperh {
+    font-size: 15px;
+    line-height: 18px;
+    color: #007F7F;
+    font-weight: 600;
+    margin-top:6px;
+}
+p.perhourprice {
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 18px;
+    color: #000000;
+}
+h4.pname-c {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 23px;
+    color: #7F007F;
+    margin-top: 16px;
+}
+
+p.pdesination-c {
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 18px;
+    color: #000000;
+}
+.plocation {
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 18px;
+    color: #000000;
+    position: relative;
+    padding-left: 20px;
+    margin-top: 42px;
+}
+p.plocation:before {
+    width: 20px;
+    height: 20px;
+    background: red;
+    position: absolute;
+    left: 0px;
+    top: 2px;
+    content: '';
+    background: url(/assets/images/job/location-icon.png) no-repeat;
+}
+.biorow{
+    margin-top: 60px;
+ 
+}
+.borderleftc{
+    position: relative;
+}
+.borderleftc:after {
+    height: 62px;
+    width: 1px;
+    background: #CBDFDF;
+    content: '';
+    right: 11px;
+    position: absolute;
+    top: 5px;
+}
+.cv-container {
+    border: 1px solid #CBDFDF;
+    padding: 20px 10px 60px 10px;
+}
+.prosals-h {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 18px;
+    color: #000000;
+    display: inline-block;
+    padding: 10px 10px 40px 17px;
+}
+div#custom-search-input {
+    background: #EFF8F8;
+    border: 1px solid #CBDFDF;
+    border-radius: 6px;
+    
+}
+div#custom-search-input input {
+    background: transparent;
+    border: none;
+}
+
+div#custom-search-input .input-group {
+    margin-bottom: 0px;
+}
+div#custom-search-input span.input-group-btn {
+    position: relative;
+    top: 9px;
+    right: 10px;
+}
+select#Filters {
+    float: right;
+    background: #EFF8F8;
+    border: 1px solid #CBDFDF;
+    border-radius: 5px;
+    padding: 8px 17px 8px 34px;
+    color: #007F7F;
+    font-size: 16px;
+    margin-right: -13px;
+}
+select#bestmatch {
+        float: right;
+        background: #EFF8F8;
+    border: 1px solid #CBDFDF;
+    border-radius: 5px;
+    padding: 8px 15px 8px 15px;
+    color: #007F7F;
+    font-size: 16px;
+    position: relative;
+    right: -27px;
+}
+
+p.sort-p {
+    width: 80%;
+    display: inline-block;
+    float: left;
+    text-align: right;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 18px;
+    color: #000000;
+    margin-top: 11px;
+}
+.row.btns-s {
+    position: relative;
+    left: 23px;
+}
+
+@media only screen and (max-width:1200px){
+    /* a.btn-products-s {
+    border: 1px solid #7F007F;
+    border-radius: 4px;
+    padding: 6px 8px;
+    font-weight: 600;
+    font-size: 13px;
+    
+} */
+p.sort-p {
+    width: 70%;
+    }
+
+
+}
+@media only screen and (max-width:1190px){
+    select#bestmatch{
+        right: 0px;
+    }
+}
+@media only screen and (max-width:767px){
+    .p_desription p{
+        width: 100%;
+        text-align: center;
+    }
+    a.btn-products-s {
+        width: auto;
+        text-align: CENTER;
+        margin: 8px auto;
+        display: block;
+        padding: 7px 20%;
+        display: inline-block;
+    }
+    ul.skills-listing li {
+        margin-right: 1%;
+        margin-bottom: 14px;
+        font-size: 12px !important;
+        padding: 2px 2%;
+    }
+select#bestmatch {
+    
+    float: right;
+    width: 84%;
+    margin-bottom: 15px;
+    right: 0px;
+
+}
+p.sort-p {
+    width: auto;
+}
+
+select#Filters {
+    float: none;
+    background: #EFF8F8;
+    border: 1px solid #CBDFDF;
+    border-radius: 5px;
+    padding: 8px 17px 8px 34px;
+    width: 100%;
+    margin-right: -13px;
+}
+p.rateperh{
+    text-align: center;
+}
+p.perhourprice {
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 18px;
+    color: #000000;
+    text-align: CENTER;
+    margin-bottom: 20px;
+}
+.row.borderleftc {
+    text-align: center;
+    margin-top: 30px;
+}
+.borderleftc:after{
+    display: none;
+}
+.plocation {
+    font-weight: 600;
+    font-size: 14px;
+    position: relative;
+    padding-left: 0px;
+    margin-top: 2px;
+    margin-bottom: 40px !important;
+    margin-top: 16px;
+    display: inline-block;
+}
+p.plocation:before{
+    left: -24px;
+}
+.row.btns-s {
+    position: relative;
+    left: 0px;
+    text-align: center;
+}
+.row.btns-s .col-md-4{
+    display: inline-block;
+    flex: auto;
+    width: 3.33%;
+}
+ul.skills-listing {
+    margin-top: 15px;
+    text-align: center;
+    display: inline-block;
+    width: 100%;
+}
+ul.skills-listing li{
+    float: none;
+    display: inline-block;
+}
+.skills-c h2{
+    text-align: center;
+}
+
+}
+
+
