--- a/public/css/send-offer.css
+++ b/public/css/send-offer.css
@@ -1,1 +1,253 @@
-h6{font-size:18px!important}.image-ui{border-radius:74%!important;height:113px!important;width:113px!important;margin-right:23px}.tag-class{border-radius:14px;color:#007f7f;border:1px solid #007f7f;height:18px;width:70px;BACKGROUND:#fff;font-size:11px;margin:6px 4px 0 6px;text-align:center}.btn-purple-outline{background:#fff;border:none;color:#7f007f}.btn-purple{border-radius:5px;color:#fff;background:#fff;border:none;background:#7f007f;padding:4px 24px;height:38px}.tag-class p{text-align:center}.image-div{position:relative}.border-bg-green{border:1px solid #007f7f!important}.paragraph-alignment{text-align:center;white-space:normal;width:70%}.card-border{border:1px solid #cbdfdf!important}.ml{margin-left:18px}.margin-left-responsive-media{margin-left:-2px}.milestoneButton{color:#7f007f!important;background-color:transparent}.login-status{position:absolute;right:39px;bottom:0;font-size:30px}.logged-in{color:#4cd137}.logged-out{color:#c23616}.fs-23px:before{font-size:55px}.clock-icon-class,.icon-class{background-size:13px;margin-right:7px;color:transparent;background-repeat:no-repeat}.icon-class{background-image:url(/assets/images/job/location-icon.png);width:16px;height:20px}.clock-icon-class{background-image:url(/assets/images/job/clock-icon.png);width:20px;height:25px}.card{white-space:nowrap}.form-check-label span{color:#007f7f}.fs-16px{font-size:16px!important}.border-round{border-radius:7px!important}.clip-ui{border:1px solid #ddd;border-radius:25px;display:flex;justify-content:center;align-items:center;height:25px;width:25px;padding:2px 3px 0 9px}.margin-left-responsive{margin-left:1rem}.color-purple{color:#7f007f}.fs-12px{font-size:12px}.btn-dropdown{background:#fff;border:1px solid #cbdfdf!important;color:grey}.color-green{color:#007f7f}.bg-green{background-color:#007f7f!important}.color-black{color:#000}.border-grey{border:1px solid #ddd}.btn-outline-green{border:1px solid #007f7f;background-color:#fff;color:#007f7f;border-radius:5px;padding:6px 20px;width:126px;margin-top:20px}.fs-14px{font-size:14px}.fs-15px{font-size:15px}.text-end{text-align:end}.responsive-fonts{color:#525050;font-size:14px;font-weight:600}.per-hour{margin-top:8px;font-weight:500}@media only screen and (max-width:540px){.dropdown-toggle:after{display:inline-block;margin-left:13.255em;vertical-align:.255em;content:"";border-top:.3em solid;border-right:.3em solid transparent;border-bottom:0;border-left:.3em solid transparent}.responsive-check{flex-direction:column}.text-wrap{white-space:wrap}.text-area-responsive{width:100%;height:145px;overflow:auto}.responsive-cards{flex-direction:column}.responsive-fonts{font-size:13px!important}.margin-left-responsive{margin-left:0!important}}@media only screen and (max-width:377px){.responsive-card-section{flex-direction:column}.margin-left-responsive-media{margin-left:0!important}}.margin-left-responsive-media{margin-left:1rem}.addMoreButton,.deleteButton{color:#7f007f;background:none!important;font-weight:500}hr,input,textarea{border:1px solid #cbdfdf!important}.offer-letter-alignment-top{padding-left:10px;padding-right:22px}.offer-letter-alignment{padding-left:22px;padding-right:22px}
+h6{
+    font-size: 18px !important;
+}
+ .image-ui{
+    border-radius: 74% !important;
+    height: 113px !important;
+    width: 113px !important;
+    margin-right: 23px;
+
+} 
+.tag-class{
+    border-radius: 14px;
+    color: #007F7F;
+    border: 1px solid #007F7F;
+    height: 18px;
+    width: 70px;
+
+    BACKGROUND: WHITE;
+    font-size: 11px;
+    
+    margin: 6px 4px 0 6px;
+    
+    text-align: center;
+}
+.btn-purple-outline{
+    background: white;
+    border: none;
+    color: #7F007F;
+}
+.btn-purple{  
+    border-radius: 5px;  
+    color: white;
+    background: white;
+    border: none;
+    background: #7F007F;
+    padding: 4px 24px;
+    height: 38px;
+}
+.tag-class p{
+    text-align: center;
+}
+.image-div{
+    position: relative;
+}
+.border-bg-green{
+    border:1px solid #007F7F !important;
+}
+.paragraph-alignment{
+    text-align: center;
+    white-space: normal;
+    width: 70%;
+}
+.card-border{
+    border:1px solid #CBDFDF !important;
+}
+.ml{
+    margin-left: 18px;
+}
+.margin-left-responsive-media{
+    margin-left: -2px;
+
+}
+.milestoneButton{
+    color:#7F007F !important;
+    background-color:transparent;
+}
+.login-status {
+    position: absolute;
+    right: 39px;
+    bottom: 0;
+    font-size: 30px;
+  }
+  
+  .logged-in {
+    color: #4cd137;
+  }
+  
+  .logged-out {
+    color: #c23616;
+  }
+  .fs-23px:before{
+    font-size: 55px;
+  }
+  .icon-class,
+  .clock-icon-class {
+    background-size: 13px;
+    margin-right: 7px;
+    color: transparent;
+    /* background: repeat; */
+    background-repeat: no-repeat;
+  }
+  
+  .icon-class {
+    background-image: url(/assets/images/job/location-icon.png);
+    width: 16px;
+    height: 20px;
+  }
+  
+  .clock-icon-class {
+    background-image: url(/assets/images/job/clock-icon.png);
+    width: 20px;
+    height: 25px;
+  }
+
+.card{
+    white-space: nowrap;
+}
+.form-check-label span{
+ 
+    color: #007F7F;
+}
+.fs-16px{
+    font-size: 16px !important;
+}
+.border-round{
+
+    border-radius: 7px !important; 
+
+}
+.clip-ui{
+    border: 1px solid #ddd;
+    border-radius: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 25px;
+    width: 25px;
+    padding: 2px 3px 0 9px;
+}
+.margin-left-responsive{
+    margin-left: 1rem;
+}
+.color-purple{
+    color: #7F007F;
+}
+.fs-12px{
+    font-size: 12px;
+}
+.btn-dropdown{
+    background: white;
+    border: 1px solid #CBDFDF !important;
+    color: grey;
+}
+.color-green{
+    color:#007F7F;
+}
+.bg-green{
+    background-color: #007F7F !important;
+}
+.color-black{
+    color:black;
+}
+.border-grey{
+    border:1px solid #ddd;
+}
+.btn-outline-green{
+    border: 1px solid #007F7F;
+    background-color: white;
+    color: #007F7F;
+    border-radius: 5px;
+    padding: 6px 20px;
+    width: 126px;
+    margin-top: 20px;
+}
+.fs-14px{
+    font-size: 14px;
+}
+.fs-15px{
+    font-size: 15px;
+}
+
+.text-end{
+    text-align: end;
+}
+.responsive-fonts{
+    color: #525050;
+    font-size: 14px;
+    font-weight: 600;
+}
+.per-hour{
+    margin-top: 8px;
+    font-weight: 500;
+}
+@media only screen and (max-width:540px){
+    .dropdown-toggle:after{
+        display: inline-block;
+        margin-left: 13.255em;
+        vertical-align: 0.255em;
+        content: "";
+        border-top: 0.3em solid;
+        border-right: 0.3em solid transparent;
+        border-bottom: 0;
+        border-left: 0.3em solid transparent;
+    }
+    .responsive-check{
+        flex-direction: column;
+    }
+    .text-wrap{
+        white-space: wrap;
+    }
+    .text-area-responsive{
+        width:100%;
+        height: 145px;
+        overflow: auto;
+    }
+    .responsive-cards{
+        flex-direction: column;
+    }
+    .responsive-fonts{
+font-size: 13px !important;
+    }
+    .margin-left-responsive{
+        margin-left: 0 !important;
+    }
+}
+@media only screen and (max-width:377px){
+.responsive-card-section{
+    flex-direction: column;
+    
+}
+.margin-left-responsive-media{
+    margin-left: 0 !important;
+} 
+}
+
+.margin-left-responsive-media{
+    margin-left:1rem;
+}
+.addMoreButton {
+    color: #7f007f;
+    background: none !important;
+    font-weight: 500;
+  }
+.deleteButton {
+    color: #7f007f;
+    background: none !important;
+    font-weight: 500;
+  }
+
+
+hr,input,textarea {
+    border:1px solid #CBDFDF !important;
+    /* font-weight: 600; */
+}
+.offer-letter-alignment-top{
+    padding-left: 10px;
+    padding-right: 22px;
+}
+.offer-letter-alignment{
+    padding-left: 22px;
+    padding-right: 22px;
+}
+
