--- a/public/css/breadcrum.css
+++ b/public/css/breadcrum.css
@@ -1,107 +1,1 @@
-:root {
-  --breadcrumb-theme-1: #007F7F;
-  --breadcrumb-theme-2: #fff;
-  --breadcrumb-theme-3: #007F7F;
-  --breadcrumb-theme-4: #007F7F;
-}
-.breadcrumb {
-  text-align: center;
-  display: inline-block;
-  /* box-shadow: 0 2px 5px rgba(0,0,0,0.25);   */
-  overflow: hidden;
-  border-radius: 5px;
-  counter-reset: flag;
-  justify-content: flex-start !important;
-  border: 1px solid #CBDFDF;
-}
-.breadcrumb__step {
-  text-decoration: none;
-  outline: none;
-  display: block;
-  float: left;
-  font-size: 12px;
-  line-height: 55px;
-  padding: 0 10px 0 60px;
-  position: relative;
-  background: var(--breadcrumb-theme-2);
-  color: var(--breadcrumb-theme-1);
-  transition: background 0.5s;
-}
-.breadcrumb__step:first-child {
-  padding-left: 0px;
-  border-radius: 5px 0 0 5px;
-}
-.breadcrumb__step:first-child::before {
-  left: 14px;
-}
-.breadcrumb__step:last-child {
-  border-radius: 0 5px 5px 0;
-  padding-right: 20px;
-  padding-left: 0px;
-}
-.breadcrumb__step:last-child::after {
-  content: none;
-}
-.breadcrumb__step::before {
-  /* content: counter(flag); */
-  counter-increment: flag;
-  border-radius: 100%;
-  width: 20px;
-  height: 20px;
-  line-height: 20px;
-  margin: 8px 0;
-  position: absolute;
-  top: 0;
-  left: 30px;
-  font-weight: bold;
-  background: var(--breadcrumb-theme-2);
-  box-shadow: 0 0 0 1px var(--breadcrumb-theme-1);
-}
-.breadcrumb__step::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  right: -25px;
-  width: 55px;
-  height: 55px;
-  transform: scale(0.707) rotate(45deg);
-  z-index: 1;
-  border-radius: 0 5px 0 50px;
-  background: var(--breadcrumb-theme-2);
-  transition: background 0.5s;
-  box-shadow: 2px -2px 0 1px var(--breadcrumb-theme-4);
-}
-.breadcrumb__step--active {
-  color: var(--breadcrumb-theme-2);
-  background: var(--breadcrumb-theme-1);
-}
-.breadcrumb__step--active::before {
-  color: var(--breadcrumb-theme-1);
-}
-.breadcrumb__step--active::after {
-  background: var(--breadcrumb-theme-1);
-}
-.breadcrumb__step:hover {
-  color: var(--breadcrumb-theme-2);
-  background: var(--breadcrumb-theme-3);
-}
-.breadcrumb__step:hover::before {
-  color: var(--breadcrumb-theme-1);
-}
-.breadcrumb__step:hover::after {
-  color: var(--breadcrumb-theme-1);
-  background: var(--breadcrumb-theme-3);
-}
-
-.ancortag-class{
-  width: 230px;
-  text-align: center;
-}
-
-@media only screen and (max-width: 1124px) {
-  .ancortag-class{
-    width: 50%;
-    text-align: center;
-    font-size: 10px;
-  }
-}
+:root{--breadcrumb-theme-1:#007f7f;--breadcrumb-theme-2:#fff;--breadcrumb-theme-3:#007f7f;--breadcrumb-theme-4:#007f7f}.breadcrumb{text-align:center;display:inline-block;overflow:hidden;border-radius:5px;counter-reset:flag;justify-content:flex-start!important;border:1px solid #cbdfdf}.breadcrumb__step{text-decoration:none;outline:none;display:block;float:left;font-size:12px;line-height:55px;padding:0 10px 0 60px;position:relative;background:var(--breadcrumb-theme-2);color:var(--breadcrumb-theme-1);transition:background .5s}.breadcrumb__step:first-child{padding-left:0;border-radius:5px 0 0 5px}.breadcrumb__step:first-child:before{left:14px}.breadcrumb__step:last-child{border-radius:0 5px 5px 0;padding-right:20px;padding-left:0}.breadcrumb__step:last-child:after{content:none}.breadcrumb__step:before{counter-increment:flag;border-radius:100%;width:20px;height:20px;line-height:20px;margin:8px 0;left:30px;font-weight:700;box-shadow:0 0 0 1px var(--breadcrumb-theme-1)}.breadcrumb__step:after,.breadcrumb__step:before{position:absolute;top:0;background:var(--breadcrumb-theme-2)}.breadcrumb__step:after{content:"";right:-25px;width:55px;height:55px;transform:scale(.707) rotate(45deg);z-index:1;border-radius:0 5px 0 50px;transition:background .5s;box-shadow:2px -2px 0 1px var(--breadcrumb-theme-4)}.breadcrumb__step--active{color:var(--breadcrumb-theme-2);background:var(--breadcrumb-theme-1)}.breadcrumb__step--active:before{color:var(--breadcrumb-theme-1)}.breadcrumb__step--active:after{background:var(--breadcrumb-theme-1)}.breadcrumb__step:hover{color:var(--breadcrumb-theme-2);background:var(--breadcrumb-theme-3)}.breadcrumb__step:hover:after,.breadcrumb__step:hover:before{color:var(--breadcrumb-theme-1)}.breadcrumb__step:hover:after{background:var(--breadcrumb-theme-3)}.ancortag-class{width:230px;text-align:center}@media only screen and (max-width:1124px){.ancortag-class{width:50%;text-align:center;font-size:10px}}
