--- a/public/css/testimonial_response.css
+++ b/public/css/testimonial_response.css
@@ -1,74 +1,1 @@
-    
-    .text_area{
-        min-height: 120px !important
-    }
-
-    .rating {
-        display: inline-block;
-        position: relative;
-        height: 50px;
-        font-size: 50px;
-        margin-left: 15px;
-        margin-bottom: -20px;
-
-    }
-
-    .rating label {
-        position: absolute;
-        top: 0;
-        left: 0;
-        height: 100%;
-        cursor: pointer;
-    }
-
-    .rating label:last-child {
-        position: static;
-    }
-
-    .rating label:nth-child(1) {
-        z-index: 5;
-    }
-
-    .rating label:nth-child(2) {
-        z-index: 4;
-    }
-
-    .rating label:nth-child(3) {
-        z-index: 3;
-    }
-
-    .rating label:nth-child(4) {
-        z-index: 2;
-    }
-
-    .rating label:nth-child(5) {
-        z-index: 1;
-    }
-
-    .rating label input {
-        position: absolute;
-        top: 0;
-        left: 0;
-        opacity: 0;
-    }
-
-    .rating label .icon {
-        float: left;
-        color: transparent;
-        margin-left: 8px;
-        font-size: 18px !important;
-    }
-
-    .rating label:last-child .icon {
-        color: #000;
-    }
-
-    .rating:not(:hover) label input:checked ~ .icon,
-    .rating:hover label:hover input ~ .icon {
-        color: #7f007f;
-    }
-
-    .rating label input:focus:not(:checked) ~ .icon:last-child {
-        color: #000;
-        text-shadow: 0 0 5px #7f007f;
-    }
+.text_area{min-height:120px!important}.rating{display:inline-block;position:relative;height:50px;font-size:50px;margin-left:15px;margin-bottom:-20px}.rating label{position:absolute;top:0;left:0;height:100%;cursor:pointer}.rating label:last-child{position:static}.rating label:first-child{z-index:5}.rating label:nth-child(2){z-index:4}.rating label:nth-child(3){z-index:3}.rating label:nth-child(4){z-index:2}.rating label:nth-child(5){z-index:1}.rating label input{position:absolute;top:0;left:0;opacity:0}.rating label .icon{float:left;color:transparent;margin-left:8px;font-size:18px!important}.rating label:last-child .icon{color:#000}.rating:hover label:hover input~.icon,.rating:not(:hover) label input:checked~.icon{color:#7f007f}.rating label input:focus:not(:checked)~.icon:last-child{color:#000;text-shadow:0 0 5px #7f007f}
