--- a/public/css/view-propsal.css
+++ b/public/css/view-propsal.css
@@ -1,87 +1,1 @@
-.card-bg-color{
-    background-color: #F8FAFA;
-}
-.vertical-center-div{
-   
-   align-items: center; 
-   color: #7F007F;
-   
-}
-.vertical-center-div-without-color{
-   
-    align-items: center; 
-   
-    
- }
-.margin-right{
-    margin-right: 10px;
-}
-
-.margin-left{
-    margin-left: 5px;
-}
-.profile-border-bottom{
-    border-bottom: 1px solid #CBDFDF;
-}
-
-.profile-border{
-    border: 1px solid #CBDFDF;
-}
-
-.profile-border-right{
-    border-right: 1px solid #CBDFDF;
-}
-.profile-border-left{
-    border-left: 1px solid #CBDFDF;
-
-}
-
-.table>thead {
-    vertical-align: bottom;
-}
-tbody, td, tfoot, th, thead, tr {
-    border-color: transparent !important;
-    border-style: none !important;
-    border-width: 0;
-}
-thead{
-    color: #007F7F !important;
-}
-.btn-sm{
-   
-    padding: 5px 10px;
-    background: #7F007F;
-    color: white;
-    margin-left: 10px;
-    
-}
-.padding-right{
-    padding-right: 10px;
-}
-
-.view-pfoile-btn{
-    color: #7F007F;
-    background-color: transparent;
-    border:1px solid #7F007F;
-}
-
-.job-title-color{
-    color: #007F7F;
-}
-
-.verified-icon{
-    left: 11.48%;
-    right: 86.95%;
-    top: 22.77%;
-    bottom: 76.72%;
-    background: #007F7F;
-}
-.card-bg{
-    background-color: #E7F5F5;;
-}
-
-.btn-skill{
-    background: #007F7F;
-    border-radius: 4px;
-}
-
+.card-bg-color{background-color:#f8fafa}.vertical-center-div{align-items:center;color:#7f007f}.vertical-center-div-without-color{align-items:center}.margin-right{margin-right:10px}.margin-left{margin-left:5px}.profile-border-bottom{border-bottom:1px solid #cbdfdf}.profile-border{border:1px solid #cbdfdf}.profile-border-right{border-right:1px solid #cbdfdf}.profile-border-left{border-left:1px solid #cbdfdf}.table>thead{vertical-align:bottom}tbody,td,tfoot,th,thead,tr{border-color:transparent!important;border-style:none!important;border-width:0}thead{color:#007f7f!important}.btn-sm{padding:5px 10px;background:#7f007f;color:#fff;margin-left:10px}.padding-right{padding-right:10px}.view-pfoile-btn{color:#7f007f;background-color:transparent;border:1px solid #7f007f}.job-title-color{color:#007f7f}.verified-icon{left:11.48%;right:86.95%;top:22.77%;bottom:76.72%;background:#007f7f}.card-bg{background-color:#e7f5f5}.btn-skill{background:#007f7f;border-radius:4px}
